update README for v2.1.1